fixing color contrast nav

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,38 +1,42 @@
 .navbar {
-          font-size: 18px;
-          background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
-          border: 1px solid rgba(0, 0, 0, 0.2);
-          padding-bottom: 10px;
-      }
-
-.main-nav {
-          list-style-type: none;
-          display: none;
-      }
-
-.nav-links,
-.logo {
-          text-decoration: none;
-          color: rgba(255, 255, 255, 0.7);
-      }
-
-.main-nav li {
-          text-align: center;
-          margin: 15px auto;
-      }
-
-.logo {
-          display: inline-block;
-          font-size: 22px;
-          margin-top: 10px;
-          margin-left: 20px;
-      }
-
-.navbar-toggle span {
-  position: absolute;
-  right: 20px;
+  font-size: 18px;
+  background-color: #00FFFF;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  position: sticky;
+  width: 100%;
+  padding: 5px 5px 5px 5px;
 }
 
+.main-nav {
+  list-style-type: none;
+  display: none;
+}
+
+.nav-links, .logo {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.main-nav li {
+  text-align: center;
+  margin: 15px auto;
+}
+
+.logo {
+  display: inline-block;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-left: 20px;
+  }
+
+span#js-navbar-toggle {
+    color: white;
+    position: absolute;
+    right: 40px;
+    cursor: pointer;
+    top: 10px;
+    font-size: 25px;
+}
 .active {
   display: block;
 }
